# keitaro-mcp

./: .env.example  .gitignore  LICENSE  README.md  keitaro-instances.example.json  pyproject.toml
src/keitaro_mcp/: __init__.py  __main__.py  client.py  errors.py  registry.py  server.py
